# stack-test-detailed

./: README.md  stack-test-detailed.cabal
src/: MyModule.hs
testsuite/: Detailed.hs  Exitcode.hs
